Fix: overflowing content

--- a/frontend/src/components/header/header.module.scss
+++ b/frontend/src/components/header/header.module.scss
@@ -9,6 +9,7 @@ header {
     height: 5rem;
 
     padding: 0 1rem;
+    box-shadow: 1px 1px 10px rgba(0,0,0,0.12), 1px 1px 10px rgba(0,0,0,0.24);
 
     .Logo {
         width: 3rem;
