--- a/frontend/src/pages/resident/members/members.scss
+++ b/frontend/src/pages/resident/members/members.scss
@@ -5,6 +5,9 @@
     flex-direction: column;
     padding: 1.5rem;
     gap: 2rem;
+    min-height: calc(100dvh - 5rem);
+    max-height: calc(100dvh - 5rem);
+    overflow-y: auto;
 
     > .members-info {
         display: flex;
@@ -52,7 +55,7 @@
             gap: 1rem;
                 > .members-data {
                     > :first-child {
-                        font-size: 1.6rem;
+                        font-size: 1.5rem;
                     }
         
                     > :last-child {
